--- a/_includes/header.html
+++ b/_includes/header.html
@@ -55,7 +55,7 @@
 
                         {% for tongue in site.languages %}
                         <a {% if tongue==site.active_lang %}style="font-weight: bold;" {% endif %}
-                            {% static_href %}ferh="{% if tongue == site.default_lang %}{{ site.baseurl }}{{ page.url }}{% else %}{{ site.baseurl }}/{{ tongue }}{{ page.url }}{% endif %}"{% endstatic_href %}
+                            {% static_href %}href="{% if tongue == site.default_lang %}{{ site.baseurl }}{{ page.url }}{% else %}{{ site.baseurl }}/{{ tongue }}{{ page.url }}{% endif %}"{% endstatic_href %}
                             data-base-url="{% if tongue == site.default_lang %}{{ site.baseurl }}{{ page.url }}{% else %}{{ site.baseurl }}/{{ tongue }}{{ page.url }}{% endif %}">
                             {{ tongue }}
                         </a>{%- if forloop.last == false -%}{{ " | " }}{%- endif -%}
