--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,7 +14,7 @@
     {%- endif %}
     <link rel="alternate" hreflang="{{ lang }}" href="{{ hreflang_url | absolute_url }}" />
     {%- endfor %}
-    <link rel="alternate" hreflang="x-default" {% static_href %}href="{{ page.url_without_lang | absolute_url }}"{% endstatic_href %} />
+    <link rel="alternate" hreflang="x-default" href="{{ page.url_without_lang | absolute_url }}" />
 
 
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/app.css">
