--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,8 @@
 
     <meta http-equiv="Content-Language" content="{{ page.lang }}">
 
+    {{ I18n_Headers }}
+
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/app.css">
     <link
         rel="shortcut icon"
