--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
 
 
     <meta http-equiv="Content-Language" content="{{ page.lang }}">
-    <link rel="canonical" {{ Unrelativized_Link href="{{ site.baseurl }}{{ page.url }}" }} />
+    <link rel="canonical" href="{{ Unrelativized_Link site.url | append: site.baseurl | append: page.url }}" />
     {%- for lang in site.languages -%}
     {%- if lang == site.default_lang -%}
         {%- assign hreflang_url = page.url_without_lang -%}
