--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,9 +12,9 @@
     {%- else -%}
         {%- assign hreflang_url = '/' | append: lang | append: page.url_without_lang -%}
     {%- endif %}
-    <link rel="alternate" hreflang="{{ lang }}" {{ Unrelativized_Link href="{{ hreflang_url | absolute_url }}" }} />
+    <link rel="alternate" hreflang="{{ lang }}" href="{{ Unrelativized_Link hreflang_url | absolute_url }}" />
     {%- endfor %}
-    <link rel="alternate" hreflang="x-default" {{ Unrelativized_Link href="{{ page.url_without_lang | absolute_url }}" }} />
+    <link rel="alternate" hreflang="x-default" href="{{ Unrelativized_Link page.url_without_lang | absolute_url }}" />
 
 
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/app.css">
