--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,10 +6,10 @@
 
     <meta http-equiv="Content-Language" content="{{ page.lang }}">
     <link rel="canonical" href="{{ Unrelativized_Link site.url | append: site.baseurl | append: page.url }}" />
-    {%- for lang in site.languages -%}
+    {%- for lang in site.languages %}
     <link rel="alternate" hreflang="{{ lang }}" href="{{ Unrelativized_Link site.url | append: site.baseurl | append: {{ lang }} | append: page.url | absolute_url }}" />
     {%- endfor %}
-    <link rel="alternate" hreflang="x-default" href="{{ Unrelativized_Link site.url | append: site.baseurl | append: page.url | absolute_url }}" />
+    <link rel="alternate" hreflang="x-default" href="{{ Unrelativized_Link site.url | append: site.baseurl | append: page.permalink | absolute_url }}" />
 
 
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/app.css">
