--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,10 +6,15 @@
 
     <meta http-equiv="Content-Language" content="{{ page.lang }}">
     <link rel="canonical" href="{{ Unrelativized_Link site.url | append: site.baseurl | append: page.url }}" />
-    {%- for lang in site.languages %}
-    <link rel="alternate" hreflang="{{ lang }}" href="{{ Unrelativized_Link site.url | append: site.baseurl | append: {{ lang }} | append: page.url | absolute_url }}" />
+    {%- for lang in site.languages -%}
+    {%- if lang == site.default_lang -%}
+        {%- assign hreflang_url = page.url_without_lang -%}
+    {%- else -%}
+        {%- assign hreflang_url = '/' | append: lang | append: page.url_without_lang -%}
+    {%- endif %}
+    <link rel="alternate" hreflang="{{ lang }}" href="{{ Unrelativized_Link hreflang_url | absolute_url }}" />
     {%- endfor %}
-    <link rel="alternate" hreflang="x-default" href="{{ Unrelativized_Link site.url | append: site.baseurl | append: page.permalink | absolute_url }}" />
+    <link rel="alternate" hreflang="x-default" href="{{ Unrelativized_Link site.url | append: site.baseurl | append: page.url | absolute_url }}" />
 
 
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/app.css">
