--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,14 +5,14 @@
 
 
     <meta http-equiv="Content-Language" content="{{ page.lang }}">
-    <link rel="canonical" href="{{ Unrelativized_Link site.url | append: site.baseurl | append: page.url }}" />
-    {%- for lang in site.languages -%}
+    {%- assign canonical_url_path = page.url | remove_first: page.lang %}
+    <link rel="canonical" href="{{ Unrelativized_Link site.url | append: site.baseurl | append: canonical_url_path }}" />    {%- for lang in site.languages -%}
     {%- if lang == site.default_lang -%}
         {%- assign hreflang_url = page.url_without_lang -%}
     {%- else -%}
         {%- assign hreflang_url = '/' | append: lang | append: page.url_without_lang -%}
     {%- endif %}
-    <link rel="alternate" hreflang="{{ lang }}" href="{{ Unrelativized_Link hreflang_url | absolute_url }}" />
+    <link rel="alternate" hreflang="{{ lang }}" href="{{ Unrelativized_Link hreflang_url y| absolute_url }}" />
     {%- endfor %}
     <link rel="alternate" hreflang="x-default" href="{{ Unrelativized_Link site.url | append: site.baseurl | append: page.url | absolute_url }}" />
 
