--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,8 +5,9 @@
 
 
     <meta http-equiv="Content-Language" content="{{ page.lang }}">
-    <link rel="canonical" href="{{ site.url }}{{ site.baseurl }}{{ page.url | remove: '/' | remove_first: site.active_lang | prepend: '/' | replace:'index.html','' }}">
-    <link rel="alternate" hreflang="x-default" href="{{ site.url }}{{ site.baseurl }}{{ page.url | remove: '/' | remove_first: site.active_lang | prepend: '/' | replace:'index.html','' }}">
+    {%- assign canonical_url = site.url | append: site.baseurl | append: (page.url | remove: '/' | remove_first: site.active_lang | prepend: '/' | replace:'index.html','') %}
+    <link rel="canonical" href="{{ Unrelativized_Link canonical_url }}">
+    <link rel="alternate" hreflang="x-default" href="{{ Unrelativized_Link canonical_url }}">
     {%- for lang in site.languages -%}
         {%- if lang == site.default_lang -%}
             {%- assign hreflang_url = site.url | append: site.baseurl | append: (page.url | remove: '/' | remove_first: site.active_lang | prepend: '/' | replace: 'index.html','') -%}
