--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,7 @@
     <meta http-equiv="Content-Language" content="{{ page.lang }}">
     {%- assign canonical_url = page.url | remove: '/' | remove_first: site.active_lang | replace:'index.html','' | absolute_url %}
     {{ canonical_url }}
+    {{ Unrelativized_Link canonical_url }}
     <link rel="canonical" href="{{ canonical_url }}">
     <link rel="alternate" hreflang="x-default" href="{{ canonical_url }}">
     {%- for lang in site.languages -%}
