refactor: use polyglot

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
     {%- assign canonical_url = page.url | remove: '/' | remove_first: site.active_lang | replace:'index.html','' | absolute_url %}
     {{ canonical_url }}
     {{ Unrelativized_Link href=canonical_url }}
-    <link rel="canonical" href="{{ Unrelativized_Link href=canonical_url }}">
+    <link rel="canonical" {{ Unrelativized_Link href=canonical_url }}>
     <link rel="alternate" hreflang="x-default" href="{{ Unrelativized_Link href=canonical_url }}">
     {%- for lang in site.languages -%}
         {%- if lang == site.default_lang -%}
