--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,8 +7,8 @@
     <meta http-equiv="Content-Language" content="{{ page.lang }}">
     {%- assign canonical_url = page.url | remove: '/' | remove_first: site.active_lang | replace:'index.html','' | absolute_url %}
     {{ canonical_url }}
-    <link rel="canonical" href="{% Unrelativized_Link href=canonical_url %}">
-    <link rel="alternate" hreflang="x-default" href="{{ Unrelativized_Link href=canonical_url }}">
+    <link rel="canonical" {% static_href %}href="{{ canonical_url }}"{% endstatic_href %}>
+    <link rel="alternate" hreflang="x-default" {% static_href %}href="{{ canonical_url }}"{% endstatic_href %}>
     {%- for lang in site.languages -%}
         {%- if lang == site.default_lang -%}
             {%- assign hreflang_url = site.url | append: site.baseurl | append: (page.url | remove: '/' | remove_first: site.active_lang | prepend: '/' | replace: 'index.html','') -%}
