--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,9 +5,9 @@
 
 
     <meta http-equiv="Content-Language" content="{{ page.lang }}">
-    {%- assign canonical_url = page.url | remove: '/' | remove_first: site.active_lang | replace:'index.html','' | absolute_url %}
-    <link rel="canonical" {% static_href %}href="{{ canonical_url }}"{% endstatic_href %}>
-    <link rel="alternate" hreflang="x-default" {% static_href %}href="{{ canonical_url }}"{% endstatic_href %}>
+    {%- assign canonical_url = page.url | remove: '/' | remove_first: site.active_lang | replace:'index.html','' %}
+    <link rel="canonical" {% static_href %}href="{{ canonical_url | absolute_url }}"{% endstatic_href %}>
+    <link rel="alternate" hreflang="x-default" {% static_href %}href="{{ canonical_url | absolute_url }}"{% endstatic_href %}>
     {%- for lang in site.languages -%}
         {%- if lang == site.default_lang -%}
             {%- assign hreflang_url = canonical_url -%}
