--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
 
 
     <meta http-equiv="Content-Language" content="{{ page.lang }}">
-    {%- assign canonical_url = page.url | remove: '/' | remove_first: site.active_lang | replace:'index.html','' %}
+    {%- assign canonical_url = page.url | remove_first: '/' | remove_first: site.active_lang | replace:'index.html','' %}
     <link rel="canonical" {% static_href %}href="{{ canonical_url | absolute_url }}"{% endstatic_href %}>
     <link rel="alternate" hreflang="x-default" {% static_href %}href="{{ canonical_url | absolute_url }}"{% endstatic_href %}>
     {%- for lang in site.languages -%}
