--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,11 @@
 
 
     <meta http-equiv="Content-Language" content="{{ page.lang }}">
-    {%- assign canonical_url = page.url | remove_first: '/' | remove_first: site.active_lang | replace:'index.html','' %}
+    {%- if site.active_lang == site.default_lang -%}
+        {%- assign canonical_url = page.url %}
+    {%- else -%}
+        {%- assign canonical_url = page.url | remove_first: '/' | remove_first: site.active_lang %}
+    {%- endif -%}
     <link rel="canonical" {% static_href %}href="{{ canonical_url | absolute_url }}"{% endstatic_href %}>
     <link rel="alternate" hreflang="x-default" {% static_href %}href="{{ canonical_url | absolute_url }}"{% endstatic_href %}>
     {%- for lang in site.languages -%}
