--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,14 +9,14 @@
         {%- assign canonical_url = page.url %}
     {%- else -%}
         {%- assign canonical_url = page.url | remove_first: '/' | remove_first: site.active_lang %}
-    {%- endif -%}
+    {%- endif %}
     <link rel="canonical" {% static_href %}href="{{ canonical_url | absolute_url }}"{% endstatic_href %}>
     <link rel="alternate" hreflang="x-default" {% static_href %}href="{{ canonical_url | absolute_url }}"{% endstatic_href %}>
     {%- for lang in site.languages -%}
         {%- if lang == site.default_lang -%}
             {%- assign hreflang_url = canonical_url | absolute_url -%}
         {%- else -%}
-            {%- assign hreflang_url = canonical_url | prepend: '/' | prepend: lang | absolute_url %}
+            {%- assign hreflang_url = canonical_url | prepend: lang | absolute_url %}
         {%- endif %}
     <link rel="alternate" hreflang="{{ lang }}" {% static_href %}href="{{ hreflang_url }}"{% endstatic_href %}>
     {%- endfor %}
