--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
     {%- else -%}
         {%- assign xDefaultUrl = page.url | remove_first: '/' | remove_first: site.active_lang | prepend: '/' %}
     {%- endif %}
-    <link rel="canonical" {% static_href %}href="{{ page.url | absolute_url }}"{% endstatic_href %}>
+    <link rel="canonical" {% static_href %}href="{{ page.url }}"{% endstatic_href %}>
     <link rel="alternate" hreflang="x-default" {% static_href %}href="{{ xDefaultUrl | absolute_url }}"{% endstatic_href %}>
     {%- for lang in site.languages -%}
         {%- if lang == site.default_lang -%}
