--- a/_includes/header.html
+++ b/_includes/header.html
@@ -50,12 +50,11 @@
                     <span>
                         🌐 
                         {% for tongue in site.languages %}
-                        <a {% if tongue == site.active_lang %}style="font-weight: bold; text-decoration: underline;" {% endif %}
+                        <a {% if tongue == site.active_lang %}style="font-weight: bold; text-decoration: underline;"{% endif %}
                             class="has-text-white"
                             {% static_href %}href="{% if tongue == site.default_lang %}{{ site.baseurl }}{{ page.url }}{% else %}{{ site.baseurl }}/{{ tongue }}{{ page.url }}{% endif %}"{% endstatic_href %}
                             data-base-url="{% if tongue == site.default_lang %}{{ site.baseurl }}{{ page.url }}{% else %}{{ site.baseurl }}/{{ tongue }}{{ page.url }}{% endif %}">
-                            {{ tongue }}
-                        </a>{%- if forloop.last == false -%}{{ " | " }}{%- endif -%}
+                            {{ tongue }}</a>{%- if forloop.last == false -%}{{ "|" }}{%- endif -%}
                         {% endfor %}
                     </span>
                 </div>
