--- a/_includes/header.html
+++ b/_includes/header.html
@@ -49,13 +49,14 @@
                 <div class="navbar-item has-text-white">
                     <span>
                         🌐 
-                        {% for tongue in site.languages %}
-                        <a {% if tongue == site.active_lang %}style="font-weight: bold; text-decoration: underline;"{% endif %}
+                        {%- for tongue in site.languages -%}
+                        <a
+                            {%- if tongue == site.active_lang -%}style="font-weight: bold;"{%- endif %}
                             class="has-text-white"
                             {% static_href %}href="{% if tongue == site.default_lang %}{{ site.baseurl }}{{ page.url }}{% else %}{{ site.baseurl }}/{{ tongue }}{{ page.url }}{% endif %}"{% endstatic_href %}
                             data-base-url="{% if tongue == site.default_lang %}{{ site.baseurl }}{{ page.url }}{% else %}{{ site.baseurl }}/{{ tongue }}{{ page.url }}{% endif %}">
-                            {{ tongue }}</a>{%- if forloop.last == false -%}{{ "|" }}{%- endif -%}
-                        {% endfor %}
+                            {{ tongue }}</a>{%- if forloop.last == false -%}{{ " | " }}{%- endif -%}
+                        {%- endfor -%}
                     </span>
                 </div>
 
