chore: update head.html

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,10 +5,10 @@
 
 
     <meta http-equiv="Content-Language" content="{{ page.lang }}">
-    {%- if site.active_lang == site.default_lang -%}
+    {%- if page.lang == site.default_lang -%}
         {%- assign canonicalUrl = page.url  %}
     {%- else -%}
-        {%- assign canonicalUrl = page.url | prepend: site.active_lang | prepend: '/' %}
+        {%- assign canonicalUrl = page.url | prepend: page.lang | prepend: '/' %}
     {%- endif %}
     <link rel="canonical" {% static_href %}href="{{ canonicalUrl | absolute_url }}"{% endstatic_href %}>
     <link rel="alternate" hreflang="x-default" {% static_href %}href="{{ page.url | absolute_url }}"{% endstatic_href %}>
