chore: update head.html

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,8 @@
     <meta name="theme-color" content="{{ site.theme_color | default: '#ffffff' }}">
 
 
+{{ I18n_Headers }}
+
     <meta http-equiv="Content-Language" content="{{ page.lang }}">
     {%- if page.lang == site.default_lang -%}
         {%- assign canonicalUrl = page.url  %}
