--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
     <meta name="theme-color" content="{{ site.theme_color | default: '#ffffff' }}">
 
 
-{{ I18n_Headers }}
+{% I18n_Headers %}
 
     <meta http-equiv="Content-Language" content="{{ page.lang }}">
     {%- if page.lang == site.default_lang -%}
